# xuexie-swifty

./: .gitignore  Cargo.toml  README.md  build-rust.sh
Example/: Package.swift
Example/Sources/Example/: main.swift
src/: character.rs  dictionary.rs  lib.rs  utils.rs
